22-12-2014 5.0.93
- Shared files tree regenerated cache when item on ACL is delete
- Move event via context menu back in time failed
- Core: fixed timezone setting for Z-Push sync.

03-12-2014 5.0.92
- Set max_execution_time to 0 in download action
- Time Tracking: No overwriting travel distance with default distance.
- Calendar: When adding participants, check if participant already can be found, if so then update the existing one, otherwise create a new one.
- Calendar: Fixed double deletion of events when removing a calendar.
- Weekly recurring events without an BYDAY directive will recur on the correct day when the event start between 00:00 and 01:00

11-11-2014 5.0.91
- File Search: fixed searching for file types
- Email: Fixed problem with enable/disable templates button when the user has no permissions to use the addressbook module
- Documenttemplates - Fixed Exception that was throwed when no customfieldrecord could be found
- Files: Fixed global copy-paste/cut-paste.

06-11-2014 5.0.90
- Units ran off screen in billing pdf
- Email: added new config property to the emailcomposer to disable the template button (config.disableTemplates)
- Tasks: Added pagination to the category select combobox
- Accept YYYYMMDD format when importing vCard with birthdays
- If fs/Folder fails to copy (because destination might be inside source folder) the already created folder record will be deleted
- Added clarification for CalDAV tasklist sync to the settings->synchronization panel

28-10-2014 5.0.89
- Sorting users respects sort of name order
- Billing: Fixed display problem of costcode combos: Changed displaying "code" instead of "name" in the combo
- Fixed problem with attachments in the \tmp\attachments\ folder that didn't get removed after sending an email from a mime source
- Address Book & Custom Fields: fixed advanced searching Tree Select custom fields in Address Book module.

22-10-2014 5.0.88