@@ -1,3 +1,5 @@
+- Tasks can be shown in the calendar at start date, end date or entirely depending on the "calendar_tasklist_show" config option
+
 22-12-2014 5.0.93
 - Shared files tree regenerated cache when item on ACL is delete
 - Move event via context menu back in time failed
